--- a/sass/main.scss
+++ b/sass/main.scss
@@ -70,6 +70,11 @@ a {
         text-align: center;
         font-size: 3rem;
     }
+    & option {
+        color: black;
+        font-weight: 900;
+        font-size: 1.2em;
+    }
 }
 #image-pres {
     width: 100%;
